video background adjustments and overflow bugs

--- a/src/blocks/block-grid-container/styles/editor.scss
+++ b/src/blocks/block-grid-container/styles/editor.scss
@@ -118,6 +118,16 @@
 	text-align: center;
 }
 
+/* backend video background specifics to account for aspect ratio issues with editor */
+.editor-styles-wrapper .c9-grid-has-video>.c9-video-container>.c9-embed-container {
+	width: 300%;
+	left: -100%;
+}
+
+.editor-styles-wrapper .wp-block[data-type="c9-blocks/grid"] .c9-grid.c9-grid-has-video {
+	overflow: hidden;
+}
+
 /****************************************************************************************/
 /***************************** C9 Container block edits for backend only
 /****************************************************************************************/
