--- a/src/blocks/block-grid-container/styles/style.scss
+++ b/src/blocks/block-grid-container/styles/style.scss
@@ -17,14 +17,13 @@
 	position: relative;
 }
 
-.c9-grid .c9-column-container {
+.c9-grid .c9-layout-column-wrap {
 	z-index: 14;
 }
 
 /*video background*/
 .c9-grid-has-video {
 	position: relative;
-	overflow: hidden;
 }
 
 .c9-grid-has-video .c9-video-container {
@@ -40,7 +39,9 @@
 }
 
 .c9-grid-has-video>.c9-video-container>.c9-embed-container,
-.c9-grid-has-video>.c9-video-container>.c9-embed-container iframe {
+.c9-grid-has-video>.c9-video-container>.c9-embed-container iframe,
+.c9-grid-has-video>.c9-video-container>.c9-embed-container,
+.c9-grid-has-video>.c9-video-container>.c9-embed-container .c9-video-custom {
 	position: absolute;
 	top: 0;
 	left: 0;
